--- a/lab1/app/src/main/res/layout/activity_main.xml
+++ b/lab1/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,25 @@
 
     <ImageButton
         android:id="@+id/start"
-        android:layout_width="194dp"
-        android:layout_height="189dp"
-        android:layout_marginTop="560dp"
+        android:layout_width="150dp"
+        android:layout_height="143dp"
+        android:layout_marginTop="600dp"
         android:background="@android:color/transparent"
         android:onClick="onClickStart"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bstart" />
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="169dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="120dp"
+    <ListView
+        android:id="@+id/listContacts"
+        android:layout_width="263dp"
+        android:layout_height="744dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.013"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
