--- a/CustomView/app/src/main/res/layout/activity_main.xml
+++ b/CustomView/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
 
     <ru.demchuk.customview.FleBoxLayout
-        android:id="@+id/flex"
+        android:id="@+id/flexBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
