--- a/CustomView/app/src/main/res/layout/custom_view_flex.xml
+++ b/CustomView/app/src/main/res/layout/custom_view_flex.xml
@@ -7,27 +7,113 @@
     <ru.demchuk.customview.ReactionView
         android:id="@+id/reaction1"
         app:react="🥰"
-        app:count="5"
+        app:count="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_reaction_view"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"/>
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
     <ru.demchuk.customview.ReactionView
         android:id="@+id/reaction2"
-        app:react="🥰"
-        app:count="5"
+        app:react="😐"
+        app:count="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_reaction_view"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"/>
-
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction3"
+        app:react="😎"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction4"
+        app:react="😝"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction5"
+        app:react="😈"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction6"
+        app:react="🙅"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction7"
+        app:react="🛁"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction8"
+        app:react="😳"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction9"
+        app:react="🙊"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
+    <ru.demchuk.customview.ReactionView
+        android:id="@+id/reaction10"
+        app:react="🙋"
+        app:count="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_reaction_view"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="2dp"
+        android:layout_marginVertical="2dp"
+        android:layout_marginEnd="2dp"/>
 
 
 </merge>
