--- a/CustomView/app/src/main/res/layout/custom_view_group.xml
+++ b/CustomView/app/src/main/res/layout/custom_view_group.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/image_avatar"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@mipmap/ic_launcher"
-        />
+        android:src="@drawable/white_person_48"
+        tools:ignore="MissingConstraints" />
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/name"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Я люблю тебя, какашка"
-        />
+        tools:text="Марина Демчук"
+        android:textSize="20dp"
+        android:textColor="#40e0d0"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints" />
+    <TextView
+        android:id="@+id/message_"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="25dp"
+        tools:text="Hello World!"
+        android:textColor="@color/white"
+        android:background="@drawable/message_background"
+        tools:ignore="MissingConstraints" />
 
 </merge>
